--- a/style.css
+++ b/style.css
@@ -43,3 +43,5 @@ body { display: block; place-items: center; margin: 0;
             .ListaTitlu, .ListaText { display: block; margin: 0; padding: 0; 
               font-size: 1em; line-height: 1.5em;}
             .ListaText { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }  
+
+            /*sdsdds*/
