--- a/old.style.css
+++ b/old.style.css
@@ -11,34 +11,35 @@ body { display: block; place-items: center; margin: 0;
 
 .Container {background: rgba(79, 109, 245, 0.8);
   font-size: clamp(1rem, 2vw, 2rem);
-  line-height: 1.5em; 
-  @media(min-width: 300px) {margin: 2vh; padding: 2rem; 
-    border-radius: 2rem; }
-  @media(min-width: 500px)  {margin: 7vw; padding: 3rem; }
-  }
+  line-height: 1.5em; }
+  @media(min-width: 300px) {.Container {margin: 2vh; padding: 2rem; 
+    border-radius: 2rem; }}
+  @media(min-width: 500px) {.Container {margin: 7vw; padding: 3rem; }}
+
   header {  }
     .Avatar {display: block; width: 144px; 
-    height: auto; margin: 0 1em 1em 0; border-radius: 50%;
-    @media (min-width: 395px)  {float: left; }
-    @media (min-width: 846px) and (max-width: 928px) { margin-bottom: 3rem; }
-    @media (min-width: 900px) { width: clamp(140px, 14vw, 12rem)}
-    }
+    height: auto; margin: 0 1em 1em 0; border-radius: 50%;}
+    @media (min-width: 395px) {.Avatar {float: left; }}
+    @media (min-width: 846px) and (max-width: 928px) {
+      .Avatar { margin-bottom: 3rem; }}
+    @media (min-width: 900px) {.Avatar { width: clamp(140px, 14vw, 12rem)}}
     .TitlulPaginii{ display: block; font-size: clamp(2rem, 6vw, 4rem);
     line-height: 1em;}
-    .DescrierePrincipala { display: block; margin: 0.5em 0 1.5em; 
-    @media (mind-width: 500px) { margin-bottom: 0.5em;}
-    }
+    .DescrierePrincipala { display: block; margin: 0.5em 0 1.5em; }
+    @media (mind-width: 500px) { 
+      .DescrierePrincipala{ margin-bottom: 0.5em;}}
+  
   main {  }
     .ListaLinkuri { display: block; border-top:1px solid white; 
-      margin: 0; padding: 0; 
-    @media (min-width: 1100px){display: grid; grid-template-columns: 1fr 1fr;}
+      margin: 0; padding: 0; }
+    @media (min-width: 1100px){
+      .ListaLinkuri{ display: grid; grid-template-columns: 1fr 1fr; }
     }
         .ListaItem { display: block; margin: 0; padding: 0;
         border-bottom: 1px solid white; }
           .ListaLink { display: block; padding: 0.5em; color: white; 
-          text-decoration: none;
-          &:hover { background: white; color: black;}
-          }
+          text-decoration: none;}
+          .ListaLink:hover { background: white; color: black;}
             .ListaTitlu, .ListaText { display: block; margin: 0; padding: 0; 
               font-size: 1em; line-height: 1.5em;}
             .ListaText { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }  
